--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
   java:
     image: patrycjade/docker
     networks:
-     Bridge-mostek:
+     Bridge-Zadanie-1:
     depends_on:
      - mysql
     links:
@@ -26,7 +26,7 @@ services:
     ports:
     - "8080:3306"
 networks:
-  Bridge-mostek:
+  Bridge-Zadanie-1:
     driver: bridge
     ipam:
       config:
